cluster/apps/plex-support/prowlarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    ingress.kubernetes.io/secure-backends: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  labels:
    app: prowlarr-ingress
  name: prowlarr-ingress
  namespace: plex-support
spec:
  ingressClassName: traefik
  rules:
    - host: prowlarr.finnhartshorn.com
      http:
        paths:
          - backend:
              service:
                name: prowlarr
                port:
                  number: 9696
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - prowlarr.finnhartshorn.com
      secretName: prowlarr-tls
